fix grid and spacing

--- a/my-app/src/pages/style.css
+++ b/my-app/src/pages/style.css
@@ -26,11 +26,11 @@ body{
     width: 200px;
     height: 250px;
     /* background-color:#9EDEF9; */
-    border-radius: 1rem;
-    box-shadow: 0 5px 5px rgba(0,0,0,0.5);
+    border-radius: 1rem !important;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.5) !important;
     padding: 0 1.5rem;
     display: flex;
-    align-items: center;
+    align-items: center !important;
     justify-content: space-between;
     box-sizing: border-box;
     /* float: 'left'; */
